ci: split compile native image and build into two each

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -86,19 +86,22 @@ build documentation:
     paths:
     - doc/public
 
-native image:
+.compile native image:
   stage: package
   tags:
     - stackgres-runner
   dependencies:
     - compile
+  variables:
+    NATIVE_IMAGE_EXTRA_PREFIX: ""
+    MAVEN_EXTRA_ARGS: ""
   timeout: 12 hour
   script:
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests"
     - |
-      flock /tmp/stackgres-build-native  \
+      flock "/tmp/stackgres-compile$NATIVE_IMAGE_EXTRA_PREFIX-native-image" \
         timeout -s KILL 3600 \
-        mvn $MAVEN_CLI_OPTS package -P native
+        mvn $MAVEN_CLI_OPTS package -P native $MAVEN_EXTRA_ARGS
     - 'cp $GRAALVM_HOME/jre/lib/amd64/libsunec.so stackgres-k8s/src/operator/target/'
     - 'cp $GRAALVM_HOME/jre/lib/security/cacerts stackgres-k8s/src/operator/target/'
     - 'cp $GRAALVM_HOME/jre/lib/amd64/libsunec.so stackgres-k8s/src/api-web/target/'
@@ -107,16 +110,11 @@ native image:
     expire_in: 1 week
     when: always
     paths:
-      - stackgres-k8s/src/operator/target/libsunec.so
-      - stackgres-k8s/src/operator/target/cacerts
-      - stackgres-k8s/src/operator/target/stackgres-operator-runner
-      - stackgres-k8s/src/operator/target/lib/
-      - stackgres-k8s/src/operator/target/stackgres-operator-runner.jar
-      - stackgres-k8s/src/api-web/target/libsunec.so
-      - stackgres-k8s/src/api-web/target/cacerts
-      - stackgres-k8s/src/api-web/target/stackgres-restapi-runner
-      - stackgres-k8s/src/api-web/target/lib/
-      - stackgres-k8s/src/api-web/target/stackgres-restapi-runner.jar
+      - stackgres-k8s/src/*/target/libsunec.so
+      - stackgres-k8s/src/*/target/cacerts
+      - stackgres-k8s/src/*/target/stackgres-*-runner
+      - stackgres-k8s/src/*/target/lib/
+      - stackgres-k8s/src/*/target/stackgres-*-runner.jar
   only:
     variables:
       - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
@@ -124,6 +122,18 @@ native image:
       - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
       - $DO_DEPLOY
       - $DO_NATIVE
+
+compile operator native image:
+  extends: .compile native image
+  variables:
+    NATIVE_IMAGE_EXTRA_PREFIX: "-operator"
+    MAVEN_EXTRA_ARGS: "-pl .,common,operator-framework,test-util,operator"
+
+compile restapi native image:
+  extends: .compile native image
+  variables:
+    NATIVE_IMAGE_EXTRA_PREFIX: "-restapi"
+    MAVEN_EXTRA_ARGS: "-pl .,common,operator-framework,test-util,api-web"
 
 enforce release:
   stage: check-release
@@ -177,13 +187,15 @@ build jvm image:
     variables:
       - $SKIP_E2E != "true"
 
-build native image:
+.build native image:
   stage: pre test
   tags:
     - stackgres-runner
   dependencies:
     - compile
-    - native image
+  variables:
+    NATIVE_IMAGE_EXTRA_PREFIX: ""
+    MAVEN_EXTRA_ARGS: ""
   timeout: 12 hour
   retry: 2
   script:
@@ -192,9 +204,9 @@ build native image:
     - 'export RESTAPI_IMAGE_NAME="stackgres/restapi:$IMAGE_TAG"'
     - MAVEN_CLI_OPTS="$MAVEN_CLI_OPTS -DskipTests"
     - |
-      flock /tmp/stackgres-build-native-image  \
+      flock "/tmp/stackgres-build$NATIVE_IMAGE_EXTRA_PREFIX-native-image" \
         timeout -s KILL 3600 \
-        mvn $MAVEN_CLI_OPTS package -P build-image-native
+        mvn $MAVEN_CLI_OPTS package -P build-image-native $MAVEN_EXTRA_ARGS
   only:
     variables:
       - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME == "development"
@@ -202,6 +214,24 @@ build native image:
       - $SKIP_E2E != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
       - $DO_DEPLOY
       - $DO_NATIVE
+
+build operator native image:
+  extends: .build native image
+  dependencies:
+    - compile
+    - compile operator native image
+  variables:
+    NATIVE_IMAGE_EXTRA_PREFIX: "-operator"
+    MAVEN_EXTRA_ARGS: "-pl .,common,operator-framework,test-util,operator"
+
+build restapi native image:
+  extends: .build native image
+  dependencies:
+    - compile
+    - compile restapi native image
+  variables:
+    NATIVE_IMAGE_EXTRA_PREFIX: "-restapi"
+    MAVEN_EXTRA_ARGS: "-pl .,common,operator-framework,test-util,api-web"
 
 build ui image:
   image: docker.io/ongres/builder:latest
@@ -226,7 +256,8 @@ integration test:
   timeout: 12 hour
   script:
     - |
-      flock -s /tmp/stackgres-build-native \
+      flock -s /tmp/stackgres-compile-operator-native-image \
+        flock -s /tmp/stackgres-compile-restapi-native-image \
         flock /tmp/stackgres-integration-test \
         timeout -s KILL 3600 \
         mvn $MAVEN_CLI_OPTS verify -P integration -Dit.skipBuildContainer=true
@@ -259,7 +290,8 @@ integration test:
     - 'export E2E_PULLED_IMAGES_PATH="/tmp/pulled-images-jvm-image$E2E_EXTRA_SUFFIX-$E2E_RUN_BATCH_INDEX"'
     - 'export K8S_SUFFIX="$K8S_SUFFIX$E2E_EXTRA_SUFFIX-$E2E_RUN_BATCH_INDEX"'
     - |
-      flock -s /tmp/stackgres-build-native \
+      flock -s /tmp/stackgres-compile-operator-native-image \
+        flock -s /tmp/stackgres-compile-restapi-native-image \
         flock "/tmp/stackgres-integration-test-jvm-image$E2E_EXTRA_SUFFIX-$E2E_RUN_BATCH_INDEX" \
         timeout -s KILL 3600 \
         mvn $MAVEN_CLI_OPTS verify -P integration \
@@ -329,7 +361,8 @@ e2e exclusive tests jvm image part 2/2:
     - 'export E2E_PULLED_IMAGES_PATH="/tmp/pulled-images-native-image$E2E_EXTRA_SUFFIX-$E2E_RUN_BATCH_INDEX"'
     - 'export K8S_SUFFIX="$K8S_SUFFIX$E2E_EXTRA_SUFFIX-$E2E_RUN_BATCH_INDEX"'
     - |
-      flock -s /tmp/stackgres-build-native \
+      flock -s /tmp/stackgres-compile-operator-native-image \
+        flock -s /tmp/stackgres-compile-restapi-native-image \
         flock "/tmp/stackgres-integration-test-native-image$E2E_EXTRA_SUFFIX-$E2E_RUN_BATCH_INDEX" \
         timeout -s KILL 3600 \
         mvn $MAVEN_CLI_OPTS verify -P integration \
