fix: Filter operator namespace in the REST API

--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -12,18 +12,18 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/banner.txt,\
   -H:ReflectionConfigurationFiles=reflection-config.json
 
+
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=ALL
 quarkus.log.category."io.stackgres".level=ALL
-quarkus.log.category."io.quarkus".level=DEBUG
+quarkus.log.category."io.quarkus".level=INFO
 
 # Logger Development
 %dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{5.}] (%t) %s%e%n
 %dev.quarkus.log.console.level=ALL
 %dev.quarkus.log.category."io.stackgres".level=ALL
 %dev.quarkus.log.category."io.quarkus".level=DEBUG
-
 
 # SSL configuration
 quarkus.ssl.native=true
