feat: add source pod field to backup information object It intends to replace the hostname fields, which is now deprecated and will be deleted in future releases

--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGBackup.yaml
@@ -95,6 +95,10 @@ spec:
                   type: string
                   description: |
                     The hostname of instance where the backup is taken.
+                sourcePod:
+                  type: string
+                  description: |
+                    The pod where the backup is taken.                
                 systemIdentifier:
                   type: string
                   description: |
