feat: Creating a fallback rule, if a resource is not found return the index pase

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/nginx-stackgres-config.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/nginx-stackgres-config.yaml
@@ -19,7 +19,7 @@ data:
       index index.html;
  
       location /admin/ {
-        try_files $uri admin/$uri $uri/index.html;
+        try_files $uri $uri/index.html /admin/index.html;
       }
 
       location ~ ^(/|/admin|/admin/)$ {
