feat: Change cluster stats REST API endpoint

--- a/stackgres-k8s/src/api-web/src/main/resources/patroni-stats.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/patroni-stats.properties
@@ -1,8 +1,30 @@
-cpuFound=echo "$(cat /proc/cpuinfo | grep '^processor' | wc -l)"
-memoryFound=echo "$(cat /proc/meminfo|grep "^MemTotal:"|sed 's/\\s\\+/ /g'|cut -d ' ' -f 2)Ki"|numfmt --from=iec-i --to=iec-i
-memoryUsed=echo "$(($(cat /proc/meminfo|grep "^MemTotal:"|sed 's/\\s\\+/ /g'|cut -d ' ' -f 2)-$(cat /proc/meminfo|grep "^MemAvailable:"|sed 's/\\s\\+/ /g'|cut -d ' ' -f 2)))Ki"|numfmt --from=iec-i --to=iec-i
-diskFound=echo "$(df -h /var/lib/postgresql | tail -n +2 | sed 's/\\s\\+/ /g' | cut -d ' ' -f 2)i"
-diskUsed=echo "$(df -h /var/lib/postgresql | tail -n +2 | sed 's/\\s\\+/ /g' | cut -d ' ' -f 3)i"
-load1m=echo "$(cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 1 | tr ' ' '\\n')"
-load5m=echo "$(cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 2 | tr ' ' '\\n')"
-load10m=echo "$(cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 3 | tr ' ' '\\n')"
+cpuFound=cat /proc/cpuinfo | grep '^processor' | wc -l
+cpuQuota=cat /sys/fs/cgroup/cpu/cpu.cfs_quota_us
+cpuPeriod=cat /sys/fs/cgroup/cpu/cpu.cfs_period_us
+cpuPsiAvg10=cat /sys/fs/cgroup/cpu.pressure | cut -d ' ' -f 2 | cut -d = -f 2
+cpuPsiAvg60=cat /sys/fs/cgroup/cpu.pressure | cut -d ' ' -f 3 | cut -d = -f 2
+cpuPsiAvg300=cat /sys/fs/cgroup/cpu.pressure | cut -d ' ' -f 4 | cut -d = -f 2
+cpuPsiTotal=cat /sys/fs/cgroup/cpu.pressure | cut -d ' ' -f 5 | cut -d = -f 2
+memoryFound=cat /sys/fs/cgroup/memory/memory.max_usage_in_bytes
+memoryUsed=cat /sys/fs/cgroup/memory/memory.stat | grep '^total_rss ' | cut -d ' ' -f 2
+memoryPsiAvg10=cat /sys/fs/cgroup/memory.pressure | grep '^some ' | cut -d ' ' -f 2 | cut -d = -f 2
+memoryPsiAvg60=cat /sys/fs/cgroup/memory.pressure | grep '^some ' | cut -d ' ' -f 3 | cut -d = -f 2
+memoryPsiAvg300=cat /sys/fs/cgroup/memory.pressure | grep '^some ' | cut -d ' ' -f 4 | cut -d = -f 2
+memoryPsiTotal=cat /sys/fs/cgroup/memory.pressure | grep '^some ' | cut -d ' ' -f 5 | cut -d = -f 2
+memoryPsiFullAvg10=cat /sys/fs/cgroup/memory.pressure | grep '^full ' | cut -d ' ' -f 2 | cut -d = -f 2
+memoryPsiFullAvg60=cat /sys/fs/cgroup/memory.pressure | grep '^full ' | cut -d ' ' -f 3 | cut -d = -f 2
+memoryPsiFullAvg300=cat /sys/fs/cgroup/memory.pressure | grep '^full ' | cut -d ' ' -f 4 | cut -d = -f 2
+memoryPsiFullTotal=cat /sys/fs/cgroup/memory.pressure | grep '^full ' | cut -d ' ' -f 5 | cut -d = -f 2
+diskFound=df -B 1 "$PG_BASE_PATH" | tail -n +2 | sed 's/\\s\\+/ /g' | cut -d ' ' -f 2
+diskUsed=df -B 1 "$PG_BASE_PATH" | tail -n +2 | sed 's/\\s\\+/ /g' | cut -d ' ' -f 3
+diskPsiAvg10=cat /sys/fs/cgroup/io.pressure | grep '^some ' | cut -d ' ' -f 2 | cut -d = -f 2
+diskPsiAvg60=cat /sys/fs/cgroup/io.pressure | grep '^some ' | cut -d ' ' -f 3 | cut -d = -f 2
+diskPsiAvg300=cat /sys/fs/cgroup/io.pressure | grep '^some ' | cut -d ' ' -f 4 | cut -d = -f 2
+diskPsiTotal=cat /sys/fs/cgroup/io.pressure | grep '^some ' | cut -d ' ' -f 5 | cut -d = -f 2
+diskPsiFullAvg10=cat /sys/fs/cgroup/io.pressure | grep '^full ' | cut -d ' ' -f 2 | cut -d = -f 2
+diskPsiFullAvg60=cat /sys/fs/cgroup/io.pressure | grep '^full ' | cut -d ' ' -f 3 | cut -d = -f 2
+diskPsiFullAvg300=cat /sys/fs/cgroup/io.pressure | grep '^full ' | cut -d ' ' -f 4 | cut -d = -f 2
+diskPsiFullTotal=cat /sys/fs/cgroup/io.pressure | grep '^full ' | cut -d ' ' -f 5 | cut -d = -f 2
+load1m=cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 1
+load5m=cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 2
+load10m=cat /proc/loadavg | sed 's/\\s\\+/ /g' | cut -d ' ' -f 3
