--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -126,6 +126,7 @@ configurations:
       #  bucket: stackgres
       #  path: /mypath
       #  gcpCredentials:
+      #    fetchCredentialsFromMetadataService: false
       #    secretKeySelectors:
       #      serviceAccountJSON:
       #        name: gcscredentials
