fix: AuthN for the web UI / REST API and transparent use of K8s RBAC

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         version: "{{ .Chart.Version }}"
         group:  stackgres.io
     spec:
-      serviceAccountName: {{ .Release.Name }}
+      serviceAccountName: {{ .Values.restapi.name  }}
       securityContext:
         runAsNonRoot: true
         {{- if not (.Capabilities.APIVersions.Has "project.openshift.io/v1") }}
