--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-service-account.yaml
@@ -1,7 +1,12 @@
-{{- if .Values.serviceAccount.create }}
+{{- if and .Values.deploy.restapi .Values.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.restapi.name  }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/managed-by: Helm
 {{- end }}
