--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-authentication-secret.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-authentication-secret.yaml
@@ -4,7 +4,11 @@ kind: Secret
 metadata:
   name: {{ .Values.restapi.name }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    meta.helm.sh/release-name: {{ .Release.Name }}
+    meta.helm.sh/release-namespace: {{ .Release.Namespace }}
   labels:
+    app.kubernetes.io/managed-by: Helm
     api.stackgres.io/auth: user
 type: Opaque
 data:
