--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-cluster-role-binding.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-cluster-role-binding.yaml
@@ -1,6 +1,6 @@
 {{- if and .Values.deploy.restapi .Values.serviceAccount.create }}
 apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRole
+kind: ClusterRoleBinding
 metadata:
   name: {{ .Values.restapi.name }}
   annotations:
@@ -8,26 +8,12 @@ metadata:
     meta.helm.sh/release-namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/managed-by: Helm
-rules:
-- apiGroups:
-  - ""
-  resources:
-  - users
-  - groups
-  - serviceaccount
-  verbs:
-  - impersonate
-- apiGroups:
-  - authorization.k8s.io
-  resources:
-  - subjectaccessreviews
-  verbs:
-  - create
-- apiGroups:
-  - ""
-  resources:
-  - secrets # Secret Verification authentication
-  verbs:
-  - get
-  - list
+subjects:
+- kind: ServiceAccount
+  name: {{ .Values.restapi.name }}
+  namespace: {{ .Release.Namespace }}
+roleRef:
+  kind: ClusterRole
+  name: {{ .Values.restapi.name }}
+  apiGroup: rbac.authorization.k8s.io
 {{- end }}
