refactor: added license headers to all POMs

--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -31,8 +31,8 @@ quarkus.http.ssl.certificate.key-file=${quarkus.http.ssl.certificate.key-file}
 quarkus.ssl.native=true
 
 # Test SSL configuration
-%test.quarkus.http.ssl.certificate.file=target/certs/server.crt
-%test.quarkus.http.ssl.certificate.key-file=target/certs/server-key.pem
+%test.quarkus.http.ssl.certificate.file=certs/server.crt
+%test.quarkus.http.ssl.certificate.key-file=certs/server-key.pem
 %test.quarkus.ssl.native=true
 
 # Authentication
