--- a/stackgres-k8s/src/test-util/pom.xml
+++ b/stackgres-k8s/src/test-util/pom.xml
@@ -5,30 +5,32 @@
   -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>stackgres-parent</artifactId>
-        <groupId>io.stackgres</groupId>
-        <version>0.9-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <artifactId>stackgres-parent</artifactId>
+    <groupId>io.stackgres</groupId>
+    <version>0.9-SNAPSHOT</version>
+  </parent>
 
-    <artifactId>stackgres-test-util</artifactId>
+  <artifactId>stackgres-test-util</artifactId>
+  <packaging>jar</packaging>
+  <name>StackGres Test Util</name>
 
-    <properties>
-        <checks.location>${project.parent.basedir}/checks</checks.location>
-    </properties>
+  <properties>
+    <checks.location>${project.parent.basedir}/checks</checks.location>
+  </properties>
 
-    <dependencies>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-resteasy-jackson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-resteasy-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
