fix: misbehaviour when operator run in namespace than is not stackgres

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
@@ -39,6 +39,8 @@ spec:
         image: "{{ .Values.restapi.image.name }}:{{ .Values.restapi.image.tag }}"
         imagePullPolicy: {{ .Values.restapi.image.pullPolicy }}
         env:
+          - name: RESTAPI_NAMESPACE
+            value: "{{ .Release.Namespace }}"
           {{- if .Values.developer.logLevel }}
           - name: RESTAPI_LOG_LEVEL
             value: "{{ .Values.developer.logLevel }}"
