feat: Allowing to specify the service type for StackGres cluster services, and allow to add custom annotations

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/sgcluster.yaml
@@ -59,15 +59,62 @@ spec:
   {{- end }}
   {{- end }}
   {{- end }}
-  pods:
-    {{- if .Values.cluster.pods.metadata }}
-    metadata:
-      {{- if .Values.cluster.pods.metadata.annotations }}
+  {{- if .Values.cluster.postgresServices }}
+  postgresServices:
+    {{- if .Values.cluster.postgresServices.primary }}
+    primary:
+      enabled: {{ .Values.cluster.postgresServices.primary.enabled }}
+      {{- if .Values.cluster.postgresServices.primary.type }}
+      type:  {{ .Values.cluster.postgresServices.primary.type }}
+      {{- end }}
+      {{- if .Values.cluster.postgresServices.primary.annotations }}
       annotations:
-        {{- range $annot, $value := .Values.cluster.pods.metadata.annotations }}
+        {{- range $annot, $value := .Values.cluster.postgresServices.primary.annotations }}
         {{ $annot }}: {{ $value }}
         {{- end }}
       {{- end }}
+    {{- end }}    
+    {{- if .Values.cluster.postgresServices.replicas }}
+    replicas:
+      enabled: {{ .Values.cluster.postgresServices.replicas.enabled }}
+      {{- if .Values.cluster.postgresServices.replicas.type }}
+      type:  {{ .Values.cluster.postgresServices.replicas.type }}
+      {{- end }}
+      {{- if .Values.cluster.postgresServices.replicas.annotations }}
+      annotations:
+        {{- range $annot, $value := .Values.cluster.postgresServices.replicas.annotations }}
+        {{ $annot }}: {{ $value }}
+        {{- end }}
+      {{- end }}
+    {{- end }}    
+  {{- end }}
+  {{- if .Values.cluster.metadata }}
+  metadata:
+    {{- if .Values.cluster.metadata.annotations }}
+    annotations:
+      {{- if .Values.cluster.metadata.annotations.allResources }}
+      allResources: 
+        {{- range $annot, $value := .Values.cluster.metadata.annotations.allResources }}
+        {{ $annot }}: {{ $value }}
+        {{- end }}
+      {{- end }}
+      {{- if .Values.cluster.metadata.annotations.pods }}
+      pods:
+        {{- range $annot, $value := .Values.cluster.metadata.annotations.pods }}
+        {{ $annot }}: {{ $value }}
+        {{- end }}
+      {{- end }}
+      {{- if .Values.cluster.metadata.annotations.services }}
+      services:
+        {{- range $annot, $value := .Values.cluster.metadata.annotations.services }}
+        {{ $annot }}: {{ $value }}
+        {{- end }}
+      {{- end }}
+    {{- end }}
+  {{- end }}
+  pods:
+    {{- if .Values.cluster.pods.metadata }}
+    metadata:
       {{- if .Values.cluster.pods.metadata.labels }}
       labels:
         {{- range $label, $value := .Values.cluster.pods.metadata.labels }}
