fix: Include CronJobs in the annotations decorations

--- a/stackgres-k8s/install/helm/stackgres-operator/crds/SGCluster.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/SGCluster.yaml
@@ -54,7 +54,7 @@ spec:
                 Name of the [SGInstanceProfile](https://stackgres.io/doc/latest/04-postgres-cluster-management/03-resource-profiles/) to use. A SGInstanceProfile defines CPU and memory limits. Must exist before creating the cluster. If you don't select a profile, a default (currently: 1 core, 2 GiB RAM) one will be used.
             metadata:
               type: object
-              description: stackgres cluster created resources metadata information
+              description: StackGres cluster created resources metadata information
               properties:
                 annotations:
                   type: object
@@ -62,13 +62,13 @@ spec:
                   properties:
                     allResources:
                       type: object
-                      description: "Custom annotations for all stackgres resources to have"
+                      description: "Custom annotations for all StackGres resources to have"
                     pods:
                       type: object
-                      description: "Custom annotations for stackgres pods to have"
+                      description: "Custom annotations for StackGres pods to have"
                     services:
                       type: object
-                      description: "Custom annotations for stackgres services to have"
+                      description: "Custom annotations for StackGres services to have"
             postgresServices:
               type: object
               description: Postgres services configurations
