--- a/stackgres-k8s/e2e/spec/backup.values.yaml
+++ b/stackgres-k8s/e2e/spec/backup.values.yaml
@@ -6,6 +6,7 @@ configurations:
     create: true
     # Avoid backups before waiting for pods (since backup pods could biase the wait)
     baseBackups:
+      retention: 2
       cronSchedule: '0 5 31 2 *'
 cluster:
   pods:
