--- a/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
@@ -8,6 +8,10 @@ static_resources:
           port_value: postgres_entry_port
       filter_chains:
         - filters:
+            - name: envoy.filters.network.postgres_proxy
+              typed_config:
+                "@type": type.googleapis.com/envoy.extensions.filters.network.postgres_proxy.v3alpha.PostgresProxy
+                stat_prefix: ingress_postgres
             - name: envoy.tcp_proxy
               typed_config:
                 "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
@@ -24,16 +28,23 @@ static_resources:
             - name: envoy.tcp_proxy
               typed_config:
                 "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
-                stat_prefix: ingress_tcp
+                stat_prefix: ingress_raw_tcp
                 cluster: postgres_cluster
   clusters:
     - name: postgres_cluster
+      type: STATIC
       connect_timeout: 1s
       per_connection_buffer_limit_bytes: 32768 # 32 KiB
-      hosts:
-        socket_address:
-          address: 127.0.0.1
-          port_value: postgres_port
+      load_assignment:
+        cluster_name: postgres_raw_cluster
+        endpoints:
+        - lb_endpoints:
+          - endpoint:
+              address:
+                socket_address:
+                    protocol: TCP
+                    address: "127.0.0.1"
+                    port_value: postgres_port
 admin:
   access_log_path: "/dev/null"
   address:
