feat: MinIO is now not installed by default

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -167,4 +167,4 @@ minio:
 #You should only set following options for non production environment
 nonProductionOptions:
   disableClusterPodAntiAffinity: true
-  createMinio: true
+  createMinio: false
