feat: ClusterPodAntiAffinity is enabled by default

--- a/stackgres-k8s/e2e/spec/operator-backup-api.values.yaml
+++ b/stackgres-k8s/e2e/spec/operator-backup-api.values.yaml
@@ -16,6 +16,7 @@ cluster:
   prometheusAutobind: false
 nonProductionOptions:
   createMinio: true
+  disableClusterPodAntiAffinity: true 
 minio:
   readinessProbe:
     initialDelaySeconds: 5
